
noinst_LTLIBRARIES = libobjfac1.la
libobjfac1_la_CPPFLAGS = -I.. $(HR_CPPFLAGS)
libobjfac1_la_CXXFLAGS = $(HR_CXXFLAGS)
libobjfac1_la_SOURCES = \
	BallElement.cpp \
	BallElement.h \
	BumperGate.cpp \
	BumperGate.h \
	DefaultSurface.cpp \
	DefaultSurface.h \
	DoubleSpeedSource.cpp \
	DoubleSpeedSource.h \
	FinishLine.cpp \
	FinishLine.h \
	FuelSource.cpp \
	FuelSource.h \
	GenericRenderer.cpp \
	GenericRenderer.h \
	HoverRender.cpp \
	HoverRender.h \
	Mine.cpp \
	Mine.h \
	Missile.cpp \
	Missile.h \
	ObjFac1.cpp \
	ObjFac1.h \
	ObjFac1Res.h \
	PowerUp.cpp \
	PowerUp.h \
	TestElement.cpp \
	TestElement.h \
	WoodSurface.cpp \
	WoodSurface.h

