
noinst_LTLIBRARIES = libobjfactools.la
libobjfactools_la_CPPFLAGS = -I.. $(HR_CPPFLAGS)
libobjfactools_la_CXXFLAGS = $(HR_CXXFLAGS)
libobjfactools_la_SOURCES = \
	BitmapSurface.cpp \
	BitmapSurface.h \
	FreeElementBase.cpp \
	FreeElementBase.h \
	FreeElementBaseRenderer.cpp \
	FreeElementBaseRenderer.h \
	ResActor.cpp \
	ResActor.h \
	ResBitmap.cpp \
	ResBitmap.h \
	ResSound.cpp \
	ResSound.h \
	ResSprite.cpp \
	ResSprite.h \
	ResourceLib.cpp \
	ResourceLib.h \
	SpriteHandle.cpp \
	SpriteHandle.h

