
noinst_LTLIBRARIES = libparcel.la
libparcel_la_CPPFLAGS = -I.. $(HR_CPPFLAGS)
libparcel_la_CXXFLAGS = $(HR_CXXFLAGS)
libparcel_la_SOURCES = \
	Bundle.cpp \
	Bundle.h \
	ClassicObjStream.cpp \
	ClassicObjStream.h \
	ClassicRecordFile.cpp \
	ClassicRecordFile.h \
	ObjStream.cpp \
	ObjStream.h \
	RecordFile.h

