
AUTOMAKE_OPTIONS = subdir-objects

noinst_LTLIBRARIES = libscript.la
libscript_la_CPPFLAGS = -I.. $(HR_CPPFLAGS)
libscript_la_CXXFLAGS = $(HR_CXXFLAGS)
libscript_la_SOURCES = \
	Help/Class.cpp \
	Help/Class.h \
	Help/Event.cpp \
	Help/Event.h \
	Help/HelpHandler.h \
	Help/Method.cpp \
	Help/Method.h \
	Core.cpp \
	Core.h \
	Env.cpp \
	Env.h \
	Handlers.cpp \
	Handlers.h \
	Peer.cpp \
	Peer.h \
	ScriptExn.h

