
noinst_LTLIBRARIES = libvideosvc.la
libvideosvc_la_CPPFLAGS = -I.. $(HR_CPPFLAGS)
libvideosvc_la_CXXFLAGS = $(HR_CXXFLAGS)
libvideosvc_la_SOURCES = \
	2DViewPort.h \
	Bitmap.cpp \
	Bitmap.h \
	ColorPalette.cpp \
	ColorPalette.h \
	ColorTab.cpp \
	Font.cpp \
	Font.h \
	MultipartText.cpp \
	MultipartText.h \
	NumericGlyphs.cpp \
	NumericGlyphs.h \
	Patch.cpp \
	Patch.h \
	SoundServer.cpp \
	SoundServer.h \
	StaticText.cpp \
	StaticText.h \
	VideoBuffer.cpp \
	VideoBuffer.h \
	Viewport2D.cpp \
	Viewport2D.h

