
noinst_LTLIBRARIES = libvideosvc.la
libvideosvc_la_CPPFLAGS = -I.. $(HR_CPPFLAGS)
libvideosvc_la_CXXFLAGS = $(HR_CXXFLAGS)
libvideosvc_la_SOURCES = \
	Bitmap.cpp \
	Bitmap.h \
	ColorPalette.cpp \
	ColorPalette.h \
	ColorTab.cpp \
	FontSpec.cpp \
	FontSpec.h \
	MultipartText.cpp \
	MultipartText.h \
	NumericGlyphs.cpp \
	NumericGlyphs.h \
	Patch.h \
	SoundServer.cpp \
	SoundServer.h \
	Sprite.cpp \
	Sprite.h \
	StaticText.cpp \
	StaticText.h \
	VideoBuffer.cpp \
	VideoBuffer.h \
	VideoBuffer2DDraw.cpp \
	Viewport2D.cpp \
	Viewport2D.h \
	Viewport3D.cpp \
	Viewport3D.h \
	Viewport3DRendering.cpp

