
noinst_LTLIBRARIES = libutil-yaml.la
libutil_yaml_la_CPPFLAGS = -I../.. $(HR_CPPFLAGS)
libutil_yaml_la_CXXFLAGS = $(HR_CXXFLAGS)
libutil_yaml_la_LDFLAGS = -lyaml
libutil_yaml_la_SOURCES = \
	Emitter.cpp \
	Emitter.h \
	MapNode.cpp \
	MapNode.h \
	Node.h \
	NodeFactory.cpp \
	NodeFactory.h \
	Parser.cpp \
	Parser.h \
	ScalarNode.cpp \
	ScalarNode.h \
	SeqNode.cpp \
	SeqNode.h \
	YamlExn.h

